# wumpus-archiver

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  dev.sh  docker-compose.yml  docker-entrypoint.sh  mcp-config.example.json  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: python-pro.agent.md  sveltekit-frontend.agent.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANNEL_SCRAPE_FRONTEND.md  GALLERY_CHANNELS_MERGE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_STATUS.md  REFACTORING_REPORT.md  RESEARCH_REPORT.md
docs/plans/: 2026-02-15-cloudflare-voip-design.md  2026-02-15-cloudflare-voip-implementation.md  2026-02-16-data-transfer-and-bugfix-design.md  2026-02-16-data-transfer-and-bugfix-impl.md  2026-02-16-matrix-encryption-enforcement-design.md  2026-02-16-matrix-encryption-enforcement.md  2026-02-16-postgresql-dual-database-design.md  2026-02-16-postgresql-dual-database-impl.md
portal/: README.md  package-lock.json  package.json
portal/src/lib/: api.ts  types.ts
portal/src/lib/components/: ChannelGallery.svelte  GalleryGrid.svelte  Lightbox.svelte  MessageCard.svelte  Nav.svelte  SearchBar.svelte  StatCard.svelte  TimelineFeed.svelte
portal/src/lib/styles/: global.css
portal/src/routes/: +layout.svelte  +layout.ts  +page.svelte
portal/src/routes/channel/[id]/: +page.svelte
portal/src/routes/channel/[id]/gallery/: +page.svelte
portal/src/routes/channels/: +page.svelte
portal/src/routes/control/: +page.svelte
portal/src/routes/gallery/: +page.svelte
portal/src/routes/search/: +page.svelte
portal/src/routes/timeline/: +page.svelte
portal/src/routes/users/: +page.svelte
portal/src/routes/users/[id]/: +page.svelte
src/wumpus_archiver/: __init__.py  cli.py  config.py
src/wumpus_archiver/api/: __init__.py  app.py  auth.py  download_manager.py  routes.py  schemas.py  scrape_manager.py  transfer_manager.py
src/wumpus_archiver/api/routes/: __init__.py  _helpers.py  channels.py  datasource.py  downloads.py  gallery.py  guilds.py  messages.py  scrape.py  search.py  stats.py  transfer.py  users.py
src/wumpus_archiver/bot/: __init__.py  scraper.py
src/wumpus_archiver/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/wumpus_archiver/models/: __init__.py  attachment.py  base.py  channel.py  guild.py  message.py  reaction.py  user.py
src/wumpus_archiver/storage/: __init__.py  database.py  repositories.py
src/wumpus_archiver/utils/: __init__.py  downloader.py  process_manager.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_database.py  test_models.py  test_repositories.py
